nexus/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nexus
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      volumes:
        - name: nexus
          persistentVolumeClaim:
            claimName: nexus
      containers:
        - name: nexus
          image: sonatype/nexus3
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
            - name: docker
              containerPort: 5000
              protocol: TCP
            - name: docker-group
              containerPort: 5001
              protocol: TCP
          volumeMounts:
            - name: nexus
              mountPath: /nexus-data
          imagePullPolicy: Always
      restartPolicy: Always
      nodeSelector:
        role: infra
