nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: infra
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: docker
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: nexus
  type: ClusterIP
