nexus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  namespace: infra
spec:
  ingressClassName: nginx
  rules:
  - host: sre.choilab.xyz
    http:
      paths:
      - backend:
          service:
            name: nexus
            port:
              name: http
        path: /nexus(/|$)(.*)
        pathType: Prefix
